# WeiTest

./: .gitignore  INSTALL.md  PACKAGING_COMPLETE.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  TEST_RESULTS_SUMMARY.md  TODO.md  conftest.py  docsFINAL_COVERAGE_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt  teststest_coretest_waitertest_waiter_integration.py  teststest_enginetest_componenttest_all_components.py  teststest_enginetest_componenttest_checkbox.py  teststest_enginetest_componenttest_combobox.py  teststest_enginetest_componenttest_label.py  teststest_enginetest_componenttest_list_box_complete.py  teststest_enginetest_componenttest_table_complete.py  teststest_enginetest_pagetest_page_mixins.py
.github/workflows/: ci.yml
cli/: __init__.py  __main__.py
core/: __init__.py  exceptions.py
core/driver/: __init__.py  application.py  backend.py  smart_application.py  window.py
core/finder/: __init__.py  locator.py  search_engine.py  strategies.py
core/plugin/: base.py  example_plugins.py  registry.py
core/waiter/: __init__.py  custom_conditions.py  smart_wait.py  wait_condition.py
docs/: BEST_PRACTICES.md  BRAND_GUIDE.md  CI_CD_GUIDE.md  CI_CD_SETUP_GUIDE.md  COMPLETE_DELIVERY.md  COMPLETION_SUMMARY.md  COMPONENT_EXAMPLES.md  FAQ.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_PROJECT_SUMMARY.md  FINAL_SUMMARY.md  IMPROVEMENT_REPORT.md  INDEX.md  INSTALL.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_SUMMARY.md  PACKAGING_COMPLETE.md  PLUGIN_SYSTEM_GUIDE.md  QUALITY_ASSESSMENT.md  QUICKSTART.md  README_DOCS.md  REMAINING_TASKS.md  TEST_REPORT_20260328.md  USER_GUIDE.md  V2_COMPLETION_REPORT.md  V2_FINAL_SUMMARY.md  V2_PROGRESS_REPORT.md  V2_PROGRESS_REPORT_PHASE3.md  V2_PROGRESS_REPORT_PHASE4.md  V2_PROGRESS_REPORT_PHASE6.md  WEITEST_MIGRATION.md  YAML_ADVANCED_FEATURES.md  apiREADME.md  usage_cases.md
docs/api/: cli_api.md  components_api.md  core_api.md  engine_api.md  infra_api.md
docs/coverage/: COMPLEX_COMPONENT_COVERAGE_SUMMARY.md  COVERAGE_80_FINAL_STATUS.md  COVERAGE_80_PROGRESS.md  COVERAGE_FINAL_REPORT.md  COVERAGE_IMPROVEMENT_PLAN.md  FINAL_QUALITY_REPORT.md
engine/: __init__.py
engine/assertion/: __init__.py  advanced_assertions.py  assertion_chain.py  base_assert.py  ui_assert.py
engine/component/: __init__.py  button.py  checkbox.py  combobox.py  data_grid.py  input.py  label.py  list_box.py  menu.py  progress_bar.py  radio_button.py  tab_control.py  table.py  tree_view.py
engine/locators/: __init__.py  coord_locator.py  image_locator.py  image_search_engine.py
engine/page/: __init__.py  base_page.py  yaml_generator.py  yaml_loader.py  yaml_page.py
framework/: __init__.py
framework/data/: env.yaml
framework/pages/: base_page.yaml  calculator_page.yaml  login_page.yaml  (+1 more)
infra/: __init__.py
tests/: __init__.py  conftest.py
(+53 files in other folders)
