[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotestme-ng"
version = "0.1.0"
description = "Next Generation Windows UI Automation Testing Framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pywinauto>=0.6.8",
    "pytest>=7.4.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest-cov>=4.0.0",
]

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "W", "F", "I", "N", "PYI"]

[tool.black]
line-length = 100
target-version = ["py39"]

[project.scripts]
atm = "cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
