[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wei-test"
version = "2.0.1"
description = "微测试 - 下一代 Windows UI 自动化测试框架"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["test", "automation", "ui", "windows", "pywinauto", "wei"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pywinauto>=0.6.8",
    "pytest>=7.4.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://wei-test.dev"
Documentation = "https://docs.wei-test.dev"
Repository = "https://github.com/wei-test/wei-test"

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "W", "F", "I", "N", "PYI"]

[tool.black]
line-length = 100
target-version = ["py39"]

[project.scripts]
wei = "cli.__main__:main"

[tool.setuptools.packages.find]
include = ["core*", "engine*", "infra*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
